--- a/green.html
+++ b/green.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,9 @@
 </head>
 <body>
     <h1>I love animals</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam fuga tenetur cupiditate earum sunt, neque quisquam adipisci. Voluptatem, facilis, optio velit nisi aut fugiat ut fuga exercitationem, sapiente voluptates quisquam!</p>
     
 </body>
-</html>
+</html><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui ipsa odit velit dignissimos obcaecati tempore, repellendus neque quaerat accusamus odio voluptatem. Sequi minus sit, a modi pariatur consectetur ab omnis?
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi sapiente eos omnis autem a deserunt voluptate qui temporibus aut architecto, tempore veritatis distinctio dolores veniam. Voluptate ducimus harum doloremque omnis.</p>
+</p>
