--- a/green.html
+++ b/green.html
@@ -14,3 +14,5 @@
 </html><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui ipsa odit velit dignissimos obcaecati tempore, repellendus neque quaerat accusamus odio voluptatem. Sequi minus sit, a modi pariatur consectetur ab omnis?
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi sapiente eos omnis autem a deserunt voluptate qui temporibus aut architecto, tempore veritatis distinctio dolores veniam. Voluptate ducimus harum doloremque omnis.</p>
 <a href="https://en.wikipedia.org/wiki/September_11_attacks">Read More</a>
+<img src="jackals image/Sept-11-Tribute_AP_Sept-12-2013.webp" alt="September 11th Tributes in 2013">
+<img src="jackals image/boeing 767.jpg" alt="An American Airlines Boeing 767">
