--- a/arizona.html
+++ b/arizona.html
@@ -11,11 +11,16 @@
 </head>
 
 <body>
+    <!--Heading and subheading-->
     <h1> The Voyage </h1>
     <h2> Early Days</h2>
+
+    <!--information about the ship-->
     <p> The R.M.S Titanic was a transatlantic ocean liner that sailed from Southampton, England on 10th April 1912 and was set to arrive in New York City, US on the morning of 17th April 1912. However the ship struck an iceberg on it's starboard sign on 14th April 1912 and sank in the early morning hours of 15th April 1912 claiming 1500 lives. The disaster is one of the most known maritime disaters of all time </p>
     <p> The sinking of Titanic inspired many movies but the best known is Titanic (1997) directed by James Cameron. It became one of the highest grossing movies at the bpx office of all time. </p>
     <a href="https://en.wikipedia.org/wiki/Titanic">read more</a>
+
+    <!--image of ship-->
     <img src="jackals image/RMS_Titanic_3_(cropped_to_ship).jpg" alt="Image of Titanic">
 
     <!--List of famous passengers-->
