--- a/pages/green.html
+++ b/pages/green.html
@@ -27,11 +27,11 @@
     </p>
     <a href="https://en.wikipedia.org/wiki/September_11_attacks">Read More</a>
     <img
-      src="jackals image/Sept-11-Tribute_AP_Sept-12-2013.webp"
+      src="../jackals image/Sept-11-Tribute_AP_Sept-12-2013.webp"
       alt="September 11th Tributes in 2013"
     />
     <img
-      src="jackals image/boeing 767.jpg"
+      src="../jackals image/boeing 767.jpg"
       alt="An American Airlines Boeing 767"
     />
 
